# langchain-course

./: .gitignore  CONTRIBUTING.md  README.md  env.example  pyproject.toml
01-agent-fundamentals/: 01-react.ipynb  pyproject.toml
04-langchain-ecosystem/: pyproject.toml
04-langchain-ecosystem/01-langchain-essentials/: 01-langchain-intro-ollama.ipynb  01-langchain-intro-openai.ipynb  01-langchain-intro.ipynb  02-langchain-prompts-ollama.ipynb  02-langchain-prompts-openai.ipynb  02-langchain-prompts.ipynb  03-conversational-memory-openai.ipynb  03-langchain-conversational_memory.ipynb  pyproject.toml
04-langchain-ecosystem/02-langchain-prompts/: 02-langchain-prompts-ollama.ipynb  02-langchain-prompts-openai.ipynb  pyproject.toml
04-langchain-ecosystem/03-langchain-conversational_memory/: 03-langchain-conversational_memory-ollama.ipynb  03-langchain-conversational_memory-openai.ipynb
chapters/: 01-intro.ipynb  02-langsmith.ipynb  04-chat-memory.ipynb  07-lcel.ipynb  08-streaming.ipynb
chapters/09-capstone/: README.md  README.txt  serapi-tool.ipynb  streaming-test.ipynb
chapters/09-capstone/api/: README.md  agent.py  main.py
chapters/09-capstone/api/langchainapp/: streaming-test.ipynb
chapters/09-capstone/app/: package-lock.json  package.json  tailwind.config.ts
chapters/09-capstone/app/src/: types.ts
chapters/09-capstone/app/src/app/: globals.css  layout.tsx  page.tsx
chapters/09-capstone/app/src/components/: MarkdownRenderer.tsx  Output.tsx  TextArea.tsx
chapters/ollama/: 01-intro-ollama.ipynb  05-langchain-LCEL-Ollama.ipynb
notebooks/: 01-intro.ipynb  02-langsmith.ipynb  03-prompts.ipynb  04-chat-memory.ipynb  05-agents-intro.ipynb  06-agent-executor.ipynb  07-lcel.ipynb  08-streaming.ipynb
notebooks/09-capstone/: README.txt
notebooks/09-capstone/api/langchainapp/: main.py
notebooks/09-capstone/api/langchainapp/routers/: __init__.py  agent_exec.py  streaming-test.ipynb
notebooks/ollama/: 00-langsmith-ollama.ipynb  02-prompts-ollama.ipynb  03-conversational-memory-ollama.ipynb  04-WIP-agents-intro-ollama.ipynb  04-agents-intro-ollama.ipynb  04-langchain-agents-Ollama.ipynb  05-WIP-agent-executor-ollama.ipynb  05-custom-agents-ollama.ipynb
notebooks/openai/: 00-langsmith-openai.ipynb  01-intro-openai.ipynb  02-langsmith-openai.ipynb  02-prompts-openai.ipynb  03-conversational-memory-openai.ipynb  03-prompts-openai.ipynb  04-agents-intro-openai.ipynb  04-chat-memory-openai.ipynb  04-langchain-agents-OpenAI.ipynb  05-agent-executor-openai.ipynb  05-agent-executor.ipynb  05-agents-intro-openai.ipynb  05-custom-agents-openai.ipynb  05-langchain-LCEL-OpenAI.ipynb  06-agent-executor-openai.ipynb  06-lcel-openai.ipynb  07-lcel-openai.ipynb  07-streaming-openai.ipynb  08-streaming-openai.ipynb
notebooks/openai/09-langchain-fastapi/api/: pyproject.toml
notebooks/openai/09-langchain-fastapi/api/langchainapp/: main.py
notebooks/openai/09-langchain-fastapi/api/langchainapp/routers/: agent_exec.py
tooling/arxiv-api/: arxiv-api.ipynb  pyproject.toml
