[project]
name = "01-langchain-essentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "transformers>=4.46.2",
    "langchain-community>=0.3.5",
    "tiktoken>=0.8.0",
    "langchain>=0.3.7",
    "langchain-experimental>=0.3.3",
    "datetime>=5.5"
]
